--- a/signin.html
+++ b/signin.html
@@ -27,8 +27,8 @@
 </head>
 <body style="background-color: #999999;">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="about.html">
-      Aspire For Her
+    <a class="navbar-brand" href="slideshow.html">
+      Cognite
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -36,13 +36,16 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="about.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="about1.html">Home <span class="sr-only">(current)</span></a>
         </li>
        <li class="nav-item active">
-          <a class="nav-link" href="index30.html">Training <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="loans.html">Funding <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="work.html">Webinars and Workshops <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="value.html">Value For Idea<span class="sr-only">(current)</span></a>
+        </li>
+	       <li class="nav-item active">
+          <a class="nav-link" href="hiring.html">Hiring<span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
