--- a/Hiring.html
+++ b/Hiring.html
@@ -31,20 +31,20 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(45,3,75,1) 0%, rgba(1
           <a class="nav-link" href="value.html">Value For Idea <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="hiring.html">Hiring <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="Hiring.html">Hiring <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
       
       <ul class="nav navbar-nav navbar-toggler-right">
         <li class="nav-item">
-          <a class="nav-link" href="signup.html">
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signup.html">
             <span class="fas fa-user-plus"></span>
             Sign Up
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="signin.html">
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signin.html">
             <span class="fas fa-user"></span>
             Sign In
           </a>
