--- a/about1.html
+++ b/about1.html
@@ -161,7 +161,7 @@ body {
 </head>
 <body class="bg-light">
  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="slideshow.html">
+    <a class="navbar-brand" href="https://soumya1810.github.io/Team-Cognite/slideshow.html">
       Cognite
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -179,20 +179,20 @@ body {
           <a class="nav-link" href="value.html">Value For Idea <span class="sr-only">(current)</span></a>
         </li>
          <li class="nav-item active">
-          <a class="nav-link" href="hiring.html">Hring <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="Hiring.html">Hring <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
       
       <ul class="nav navbar-nav navbar-toggler-right">
         <li class="nav-item">
-          <a class="nav-link" href="signup.html">
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signup.html">
             <span class="fas fa-user-plus"></span>
             Sign Up
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="signin.html">
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signin.html">
             <span class="fas fa-user"></span>
             Sign In
           </a>
