Update and rename Registration form/index18.html to Registration/index18.html

--- a/Registration/index18.html
+++ b/Registration/index18.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="#">
-	  	FORMS
+	  <a class="navbar-brand" href="https://soumya1810.github.io/Team-Cognite/slideshow.html">
+	  	COGNITE
 	  </a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -20,26 +20,29 @@
 	  <div class="collapse navbar-collapse" id="navbarText">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="about1.html">Home <span class="sr-only">(current)</span></a>
 	      </li>
 	     <li class="nav-item active">
-	        <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="loans.html">Funding <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item active">
-	        <a class="nav-link" href="#">Contacts <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="value.html">Value For Idea<span class="sr-only">(current)</span></a>
+	      </li>
+		      <li class="nav-item active">
+	        <a class="nav-link" href="Hirirng.html.html">Hirirng<span class="sr-only">(current)</span></a>
 	      </li>
 	      
 	    </ul>
 	    
 	    <ul class="nav navbar-nav navbar-toggler-right">
 	    	<li class="nav-item">
-	        <a class="nav-link" href="#">
+	        <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signup.html">
 	        	<span class="fas fa-user-plus"></span>
 	        	Sign Up
 	        </a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">
+	        <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signin.html">
 	        	<span class="fas fa-user"></span>
 	        	Login
 	        </a>
