--- a/Registration/r4.html
+++ b/Registration/r4.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="value.html">Value For Idea <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="hiring.html">Hirirng <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="Hiring.html">Hirirng <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
