--- a/Registration/r1.html
+++ b/Registration/r1.html
@@ -126,7 +126,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(2,17,1,1) 0%, rgba(26
 
     </div>
   </div>
-  <a href="#"><h5 class="text-info py-3" style="font-size: 16px">Click To add Payment Details</h5></a>
+  <a href="https://soumya1810.github.io/Team-Cognite/payment-card-checkout/index.html"><h5 class="text-info py-3" style="font-size: 16px">Click To add Payment Details</h5></a>
 
   <button type="submit" class="btn btn-primary btn-lg align-items-center">Submit</button>
 </form>
