--- a/payment-card-checkout/index.html
+++ b/payment-card-checkout/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="slideshow.html">
       Cognite
@@ -26,13 +25,16 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="about.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="about1.html">Home <span class="sr-only">(current)</span></a>
         </li>
        <li class="nav-item active">
-          <a class="nav-link" href="index30.html">Trainig <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="loans.html">Funding <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="work.html">Webinars and Workshops <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="value.html">Value For Idea <span class="sr-only">(current)</span></a>
+        </li>
+         <li class="nav-item active">
+          <a class="nav-link" href="hiring.html">Hiring <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
@@ -53,6 +55,22 @@
       </ul>
     </div>
   </nav>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+  
 
   <div class="tips">
 Payment card number: (4) VISA, (51 -> 55) MasterCard, (36-38-39) DinersClub, (34-37) American Express, (65) Discover, (5019) dankort
