--- a/loans.html
+++ b/loans.html
@@ -31,7 +31,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(19,170,213,1) 0%, rgb
           <a class="nav-link" href="value.html">Value For Idea <span class="sr-only">(current)</span></a>
         </li>
          <li class="nav-item active">
-          <a class="nav-link" href="hiring.html">Hring <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="Hiring.html">Hring <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
