--- a/Registration/index18.html
+++ b/Registration/index18.html
@@ -29,7 +29,7 @@
 	        <a class="nav-link" href="value.html">Value For Idea<span class="sr-only">(current)</span></a>
 	      </li>
 		      <li class="nav-item active">
-	        <a class="nav-link" href="Hirirng.html.html">Hirirng<span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="Hirirng.html">Hirirng<span class="sr-only">(current)</span></a>
 	      </li>
 	      
 	    </ul>
