--- a/Registration/r1.html
+++ b/Registration/r1.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="value.html">Value For Idea <span class="sr-only">(current)</span></a>
         </li>
          <li class="nav-item active">
-          <a class="nav-link" href="hiring.html">Hiring <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="Hiring.html">Hiring <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
