--- a/loans.html
+++ b/loans.html
@@ -13,7 +13,7 @@
   <body style=" background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(19,170,213,1) 0%, rgba(6,1,118,1) 96%);">
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="slideshow.html">
+    <a class="navbar-brand" href="https://soumya1810.github.io/Team-Cognite/slideshow.html">
       Cognite
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,29 +22,29 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(19,170,213,1) 0%, rgb
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="about1.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/about1.html">Home <span class="sr-only">(current)</span></a>
         </li>
        <li class="nav-item active">
-          <a class="nav-link" href="loans.html">Funding <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/loans.html">Funding <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="value.html">Value For Idea <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/value.html">Value For Idea <span class="sr-only">(current)</span></a>
         </li>
          <li class="nav-item active">
-          <a class="nav-link" href="Hiring.html">Hring <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/Hiring.html">Hring <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
       
       <ul class="nav navbar-nav navbar-toggler-right">
         <li class="nav-item">
-          <a class="nav-link" href="signup.html">
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signup.html">
             <span class="fas fa-user-plus"></span>
             Sign Up
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="signin.html">
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signin.html">
             <span class="fas fa-user"></span>
             Sign In
           </a>
