--- a/payment-card-checkout/index.html
+++ b/payment-card-checkout/index.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
+  
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="slideshow.html">
+    <a class="navbar-brand" href="https://soumya1810.github.io/Team-Cognite/slideshow.html">
       Cognite
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,29 +26,29 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="about1.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/about1.html">Home <span class="sr-only">(current)</span></a>
         </li>
        <li class="nav-item active">
-          <a class="nav-link" href="loans.html">Funding <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/loans.html">Funding <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="value.html">Value For Idea <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/value.html">Value For Idea <span class="sr-only">(current)</span></a>
         </li>
          <li class="nav-item active">
-          <a class="nav-link" href="hiring.html">Hiring <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/Hiring.html">Hring <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
       
       <ul class="nav navbar-nav navbar-toggler-right">
         <li class="nav-item">
-          <a class="nav-link" href="signup.html">
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signup.html">
             <span class="fas fa-user-plus"></span>
             Sign Up
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="signin.html">
+          <a class="nav-link" href="https://soumya1810.github.io/Team-Cognite/signin.html">
             <span class="fas fa-user"></span>
             Sign In
           </a>
@@ -59,20 +60,7 @@
   
   
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
-  
-
-  <div class="tips">
+ <div class="tips">
 Payment card number: (4) VISA, (51 -> 55) MasterCard, (36-38-39) DinersClub, (34-37) American Express, (65) Discover, (5019) dankort
 </div>
 
