--- a/value.html
+++ b/value.html
@@ -31,7 +31,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(6,100,18,1) 0%, rgba(
           <a class="nav-link" href="value.html">Value For Idea <span class="sr-only">(current)</span></a>
         </li>
          <li class="nav-item active">
-          <a class="nav-link" href="hiring.html">Hiring <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="Hiring.html">Hiring <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
