--- a/about1.html
+++ b/about1.html
@@ -362,7 +362,7 @@ Due to this pandemic, the small industries and daily wagers have lost their jobs
         <h5 class="card-title text-center"><strong>SMEs</strong></h5>
         <hr>
         <a href="https://soumya1810.github.io/Team-Cognite/Registration/r2.html"><p class="text-info" style="font-size: 16px">Register</p></a>
-          <a href="https://soumya1810.github.io/Team-Cognite/Registration/r4.html"><p class="text-info" style="font-size: 16px">Looking For Accusations</p></a>
+          <a href="https://soumya1810.github.io/Team-Cognite/Registration/r4.html"><p class="text-info" style="font-size: 16px">Looking For Acquisition</p></a>
         <p class="card-text" style="font-size: 16px">Small and mid-size enterprises (SMEs) are businesses that maintain revenues, assets or a number of employees below a certain threshold. Each country has its own definition of what constitutes a small and medium-sized enterprise (SME). Certain size criteria must be met and occasionally the industry in which the company operates in is taken into account as well.
 Though small in size, small and mid-size enterprises (SMEs) play an important role in the economy. They outnumber large firms considerably, employ vast numbers of people and are generally entrepreneurial in nature, helping to shape innovation.</p>
       </div>
