--- a/Registration/r4.html
+++ b/Registration/r4.html
@@ -66,7 +66,7 @@
   <div class="jumbotron jumbotron-fluid" style="background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(2,17,1,1) 0%, rgba(164,186,7,1) 100%);">
   <div class="container">
-    <h1 class="display-4 text-white" style="text-align: center;"><strong>Register For Accusions</strong></h1>
+    <h1 class="display-4 text-white" style="text-align: center;"><strong>Register For Acquisition</strong></h1>
     
   </div>
 </div>
