--- a/Registration/index18.html
+++ b/Registration/index18.html
@@ -150,12 +150,12 @@
 	      </div>
 	    </div>
 
-    <div class="center">
+    <div class="center pb-4">
       <button class="btn btn-primary" id="capture-btn">Capture</button>
       
         <button class="btn btn-info" id="save">Save</button>
         <a href="#">
-          <button class="btn btn-info" id="retake">Edit</button>
+          <button class="btn btn-info" id="retake">Retake</button>
         </a>
     </div>
     
@@ -166,7 +166,7 @@
     </div>
     <div class="custom-file ">
     <input type="file" class="custom-file-input pt-5" id="customFile" placeholder="Upload Your Resume">
-  <label class="custom-file-label" for="customFile">Choose file</label>
+  <label class="custom-file-label" for="customFile">Upload Resume</label>
   </div>
 	  <button type="submit" class="btn btn-primary btn-lg btn-block mt-5 mb-5">Register</button>
 	
